--- a/style.css
+++ b/style.css
@@ -251,3 +251,24 @@ color: var(--secondary-color);
   margin-top: 30px;
 }
 /* Menu Section End  */
+/* Daytime section start */
+#daytime{
+  background: url("./imgs/daytime_bg.jpeg") center center/cover fixed no-repeat;
+  color: #fff;
+  text-align: center;  
+}
+.daytime-items{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 4rem 0;
+}
+#daytime .daytime-items h3 {
+  font-size: 32px;
+  margin: 20px 0 10px;
+}
+
+#daytime .daytime-items p {
+  font-weight: 500;
+}
+/* Daytime section end */
