--- a/style.css
+++ b/style.css
@@ -272,3 +272,36 @@ color: var(--secondary-color);
   font-weight: 500;
 }
 /* Daytime section end */
+/* Gallery Section Start */
+
+#gallery {
+  background: url("./imgs/offer-background.jpg") center center/cover;
+  padding: 8rem 0 6rem;
+}
+#gallery h2 {
+  font-size: 40px;
+  color: #fff;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+#gallery .img-gallery {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+#gallery .img-gallery img {
+  margin: 20px;
+  width: 280px;
+  height: 200px;
+  border-radius: 15px;
+  opacity: 0.8;
+}
+
+#gallery .img-gallery img:hover {
+  opacity: 1;
+}
+
+/* Gallery Section end */
